--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,17 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.android.tools.build:gradle:7.0.2'
     }
 }
 
 allprojects {
     repositories {
-        mavenCentral()
+        jcenter()
         google()
     }
 }
