--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,17 @@
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCenteral()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:7.0.4'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCenteral()
         google()
     }
 }
